2008-10-17  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/champlain/eog-champlain-plugin.c:
	Update plugin to work with latest libchamplain (Pierre-Luc Beaudoin).

2008-10-12  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac, plugins/champlain/*: new geo tagging plugin based on
	libchamplain. Patch from Pierre-Luc Beaudoin <pierre-luc@pierlux.com>.

2008-04-08  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac: property check postr program and disable plugin
	accordingly in case the program is not installed.

2008-03-17  Lucas Rocha  <lucasr@gnome.org>

	* configure.ac, plugins/Makefile.am, plugins/fullscreen/*,
	plugins/reload/*: moved fullscreen and reload to main eog
	module as default plugins.

2007-11-13  Lucas Rocha  <lucasr@gnome.org>

	* reload/eog-reload-plugin.c, reload/eog-reload-plugin.h,
	reload/reload.eog-plugin.desktop.in, reload/Makefile.am, configure.ac: 
	new "Fullscreen with double-click" plugin. Fixes bug #478695.

2007-11-13  Lucas Rocha  <lucasr@gnome.org>

	* reload/eog-reload-plugin.c, reload/eog-reload-plugin.h,
	reload/reload.eog-plugin.desktop.in, reload/Makefile.am, configure.ac: 
	new "Reload Image" plugin. Fixes bug #470185.

2007-11-13  Lucas Rocha  <lucasr@gnome.org>

	* plugin/postr/eog-postr-plugin.c: remove remaining junk code from
	plugin.

2007-11-13  Lucas Rocha  <lucasr@gnome.org>

	* plugin/postr/eog-postr-plugin.c,
	plugins/postr/postr.eog-plugin.desktop.in: general code cleanup and marked
	strings for proper translation.
	* MAINTAINERS: change file to official format.

2007-08-06  Lucas Rocha  <lucasr@gnome.org>

	* Initial import.	