@@ -70,9 +70,9 @@ ALL_PLUGINS="postr champlain"
 USEFUL_PLUGINS="postr champlain"
 DEFAULT_PLUGINS="postr champlain"
 
-PYTHON_ALL_PLUGINS=""
-PYTHON_USEFUL_PLUGINS=""
-PYTHON_DEFAULT_PLUGINS=""
+PYTHON_ALL_PLUGINS="pythonconsole"
+PYTHON_USEFUL_PLUGINS="pythonconsole"
+PYTHON_DEFAULT_PLUGINS="pythonconsole"
 
 DIST_PLUGINS="$ALL_PLUGINS $PYTHON_ALL_PLUGINS"
 
@@ -334,8 +334,9 @@ AC_SUBST(PLUGIN_LIBTOOL_FLAGS)
 AC_CONFIG_FILES([
 Makefile
 plugins/Makefile
-plugins/postr/Makefile
 plugins/champlain/Makefile
+plugins/postr/Makefile
+plugins/pythonconsole/Makefile
 po/Makefile.in])
 
 AC_OUTPUT
