@@ -1,0 +1,10 @@
+[Eog Plugin]
+Loader=python
+Module=pythonconsole
+IAge=2
+_Name=Python Console
+_Description=Python console for Eye of GNOME
+Icon=about
+Authors=Diego Escalante Urrelo <diegoe@gnome.org>
+Copyright=Copyright © 2008 Diego Escalante Urrelo
+Website=http://www.gnome.org/
